--- a/wp-content/themes/schlemmer/css/scss/_page-bio.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-bio.scss
@@ -252,10 +252,41 @@ img.bio_pic_desktop {
 	
 .bio_wrapper {
 	margin-top:0;
+	margin-bottom:100px;
 }
 
 img.bio_pic_mobile {
 	margin-top:40px;
+	margin-bottom:32px;
+}
+
+
+.bio_content_wrapper.content {
+	h1 {
+    margin-top: 10px;
+    font-size:52px;
+    line-height: 55px;
+	}
+	span.bio_position {
+		font-size:28px;
+		margin-top: 12px;
+    margin-bottom: 24px;
+	}
+} 
+
+
+.sidebar_bio {
+	margin-top: 23px;
+	padding-top: 46px;
+}
+
+
+.bio_list {
+	padding-left:0;
+	margin-bottom: 45px;
+	br {
+		display:none;
+	}
 }
 
 
@@ -265,12 +296,12 @@ img.bio_pic_mobile {
 
 
 
-@media screen and (max-width: 610px) {
+@media screen and (max-width: 590px) {
 	
 	
 	img.bio_pic_mobile {
-		width:105%;
-		max-width:100%;
+		margin-top:0;
+		width:100%;
 	}
 	
 	
