--- a/wp-content/themes/schlemmer/css/scss/_page-bio.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-bio.scss
@@ -123,6 +123,8 @@ img.bio_pic_desktop {
 		padding-bottom:0;
 		margin-bottom:0;
 		line-height: 77px;
+		font-weight:300;
+		font-style:normal;
 	}
 	span.bio_position {
 		font-family: $questrabold;
