--- a/wp-content/themes/schlemmer/css/scss/_page-bio.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-bio.scss
@@ -180,6 +180,10 @@ img.bio_pic_desktop {
 	.bio_list {
     padding-left: 13px;
    }
+   
+   img.bio_pic_mobile {
+	   max-width:400px;
+   }
 	
 	
 	
